@@ -73,6 +73,11 @@ namespace {
     NNormalSurface* findVtxOctAlmostNormalSphere2(NTriangulation* t, bool b) {
         return NNormalSurface::findVtxOctAlmostNormalSphere(t, b);
     }
+
+    BOOST_PYTHON_MEMBER_FUNCTION_OVERLOADS(OL_isCompressingDisc,
+        NNormalSurface::isCompressingDisc, 0, 1);
+    BOOST_PYTHON_MEMBER_FUNCTION_OVERLOADS(OL_isIncompressible,
+        NNormalSurface::isIncompressible, 0, 1);
 }
 
 void addNNormalSurface() {
@@ -110,6 +115,10 @@ void addNNormalSurface() {
         .def("isThinEdgeLink", isThinEdgeLink_tuple)
         .def("isSplitting", &NNormalSurface::isSplitting)
         .def("isCentral", &NNormalSurface::isCentral)
+        .def("isCompressingDisc", &NNormalSurface::isCompressingDisc,
+            OL_isCompressingDisc())
+        .def("isIncompressible", &NNormalSurface::isIncompressible,
+            OL_isIncompressible())
         .def("cutAlong", &NNormalSurface::cutAlong,
             return_value_policy<manage_new_object>())
         .def("crush", &NNormalSurface::crush,
